# AquaFlow

./: .gitignore  CMakeLists.txt  Issues.md  README.md  READMENEW.md  pump_test  pump_test.cpp
RTES Course Coding Requirements/: Continuous_Assessment_Criteria.md  Course Notes.md  course_marking_requirements.md  lec2_callbacks_threads.md  lec3_IOinterfaces.md  lec4_QT.md  lec5&6_DDS_FastCGI.md
docs/: A1_checklist.md  architecture.md  decisions.md  issues.md  journal.md  project_checklist.md
include/: IHardwareDevice.h  IProximitySensor.h  PinConfig.h
src/: main.cpp
src/app/: AquaFlowApp.cpp  AquaFlowApp.h
src/hardware/: CMakeLists.txt  FlowMeter.cpp  FlowMeter.h  GestureSensor.cpp  GestureSensor.h  LcdDisplay.cpp  LcdDisplay.h  PumpController.cpp  PumpController.h  UltrasonicSensor.cpp  UltrasonicSensor.h
src/monitor/: Monitor.cpp  Monitor.h  check_gpio.py  gpio_ultrasonic.py
src/state/: FillingController.cpp  FillingController.h
src/utils/: Logger.cpp  Logger.h  Timer.cpp  Timer.h
tests/: FillingControllerTest.cpp  FlowMeterTest.cpp  HardwareTrioTest.cpp  LcdIntegrationTest.cpp  LiskovSubstitutionStressTest.cpp  PumpFlowDuoTest.cpp  PumpIntegrationTest.cpp  gesture_direct_test.py  hardware_integration_test.cpp  pump_flow_integration_test.cpp  pump_test.cpp  relay_test.py  test_main.cpp
tests/mock_include/: gpiod.hpp
